full crud on posts and places

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Passport Authentication Practice</title>
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-	<!-- Bootstrap JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	
+	
 </head>
 <body>
-	<div class="container">
-		<% if (loggedIn) { %>
-			<span>Logged in as: </span><a href="/users/profile"><%= currentUser.name %></a>
-			<a href="/users/profile/edit">Edit Profile</a>
-			<a href="/users/profile/edit">Add Post</a>
-			<% } else { %>
-				<a href="/users/login">Log In</a>
-				<a href="/users/signup">Sign Up</a>
-										
-			<% } %>
+		<% include partials/_navbar %>
 		<%- body %>
 	</div>
 </body>
