--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -8,7 +8,7 @@
       <nav>
 
         <div class="grey nav-wrapper">
-                <a href="/" class="brand-logo">Logo</a>
+                <a href="/" class="brand-logo" style="background: black">WAYFARER</a>
                 
                 <!-- <img src="  https://i.imgur.com/zutS5MK.png "/> -->
                                 
