--- a/views/places/index.ejs
+++ b/views/places/index.ejs
@@ -1,5 +1,5 @@
 <div class="jumbotron">
         <% for(var i = 0; i < places.length; i++) { %>
-                <a href="/places/<%=places[i]._id%>"><h1><%= places[i].city %></h1></a>
+                <a href="/places/<%=places[i]._id%>"><h1 style="background:black" class=" center #ffff00-text yellow-text accent-2-text" ><%= places[i].city %></h1></a>
         <% } %>
 </div>
