--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -7,11 +7,11 @@
       </ul>
       <nav>
 
-        <div class="grey nav-wrapper">
-                <a href="/" class="brand-logo" style="background: black">WAYFARER</a>
-                
+        <div class="#eeeeee grey lighten-3 nav-wrapper">
+                <!-- <a href="/places" class="brand-logo" style="background: black">WAYFARER</a> -->
+                <a href="/places"><img src="https://i.imgur.com/oDAalNV.png"  width="200px" class="img-nav" /></a>
                 <!-- <img src="  https://i.imgur.com/zutS5MK.png "/> -->
-                                
+               
                                 
                                 
                            
@@ -21,13 +21,13 @@
             
             
             <% if (loggedIn) { %>
-              <li><a href="/users/profile/edit">Edit Profile</a></li>
-              <a href="/users/logout" class="btn btn-warning btn-sm">Logout</a> 
+              <li><a href="/users/profile/edit" class="black-text">Edit Profile</a></li>
+              <a href="/users/logout"  class="btn btn-warning btn-sm"  style="background: black" class="yellow-text">Logout</a> 
                
-                <li><a href="/users/profile"><span> @<%= currentUser.name %></span></a></li>
+                <li><a href="/users/profile" class="black-text"><span> @<%= currentUser.name %></span></a></li>
                 <% } else { %>
-                  <li><a href="/users/signup">Sign Up</a></li>
-                  <li><a href="/users/login">Log In</a></li>
+                  <li><a href="/users/signup" class="black-text">Sign Up</a></li>
+                  <li><a href="/users/login" class="black-text">Log In</a></li>
                     <% } %>
             <!-- Dropdown Trigger -->
             <!-- <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li> -->
